sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if(pos=getNombreValeurs-1) {
                     ^